--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,17 +4,22 @@
     <string name="use">name</string>
     <string name="pass">password</string>
     <string name="btn">signin</string>
-    <string name="enter">enter the invoice</string>
+    <string name="enter">Enter the invoice</string>
     <string name="type">type the invoice:</string>
     <string name="sale">purchases/sales</string>
-    <string name="name1">customer/agent</string>
+    <string name="name1">Name of customer/agent</string>
     <string name="invoice">Description of an invoice.</string>
     <string name="details">Invoice Details.</string>
-    <string name="mat">material</string>
+    <string name="mat">Material</string>
     <string name="number">number</string>
     <string name="price1">price</string>
     <string name="total1">total</string>
     <string name="Save">Save the invoice</string>
     <string name="report">reports</string>
-
-    </resources>
+    <string name="type1">Type of report: </string>
+    <string name="sit">Sitting</string>
+    <string name="from">From</string>
+    <string name="to">To</string>
+    <string name="search2">Search</string>
+    <string name="search1">Search top partner</string>
+</resources>
