--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="price1">price</string>
     <string name="total1">total:</string>
     <string name="Save">Save the invoice</string>
+    <string name="openDate">Open Calender</string>
     <string name="report">reports</string>
     <string name="type1">Type of report: </string>
     <string name="sit">Settings</string>
@@ -22,4 +23,6 @@
     <string name="to">To</string>
     <string name="search2">Search</string>
     <string name="search1">Search top partner</string>
+    <string name="is_buy">Is Buy</string>
+
 </resources>
